@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="main">
+    <file>edit-clear.png</file>
     <file>format-indent-less.png</file>
     <file>format-indent-more.png</file>
     <file>edit-find.png</file>
