@@ -1,8 +1,9 @@
 Sigil v0.1.6 <ADD_DATE>
+    - new "Remove Formatting" WYSIWYG action (issue #56)
     - Sigil now preserves ALL HTML entity references (it used to convert most to Unicode
     equivalents). This change was necessary since soft hyphens were becoming "invisible" (issue 186)
-    - implemented "blockquote" support through new WYSIWYG actions: "indent less" and
-    "indent more" (issue #41)
+    - implemented "blockquote" support through new WYSIWYG actions: "Indent Less" and
+    "Indent More" (issue #41)
     - updating Qt fixed an issue with images wrapped in SVG tags not being shown (issue #91)
     - updated Qt from 4.5.2 to 4.6.0
     - fixed an issue with regex matching in Code View when such regexes referenced line
